[package]
name = "pastel_solana_archival_data_integration_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.20.0", features = ["rustls-tls-native-roots"] } # Added rustls-tls-native-roots feature
tokio = { version = "1.32.0", features = ["full"] }
zstd = "0.12.4"
serde_json = "1.0.105"
chrono = "0.4.26"
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
rayon = "1.7.0"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "gzip"] }
log = "0.4"
sysinfo = "0.29.8"