[package]
name = "pastel_solana_archival_data_integration_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.20.0", features = ["rustls-tls-native-roots"] } # Added rustls-tls-native-roots feature
tokio = { version = "1.32.0", features = ["full"] }
zstd = { version = "0.12.4", features = ["zstdmt"] }
serde_json = "1.0.105"
chrono = "0.4.26"
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
rayon = "1.2.1"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "gzip"] }
log = "0.4"
sysinfo = "0.29.8"
num_cpus = "1.16.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.20", features = ["json"] }

[[bin]]
name = "pastel_solana_archival_data_integration_api"
path = "src/main.rs"

[[bin]]
name = "old_faithful_solana_connector"
path = "src/old_faithful_solana_connector.rs"